change admin log

--- a/views/adminsign.ejs
+++ b/views/adminsign.ejs
@@ -34,15 +34,9 @@
     <input type="text" name="address" required>
 
     <button>SIGN UP</button>
-    <a href="/adminlog">ADMIN LOG???</a>
+    <a href="/adminid">ADMIN LOG???</a>
 </form>
-<% log.forEach((index,log)={ %>
-<div class="adminall">
 
-    <h3> <span><%= index+1 %></span><%= log.name  %></h3>
-    <h4><%= log.password %></h4>
-<% }) %>
-</div>
 
 
 
