--- a/views/adminlog.ejs
+++ b/views/adminlog.ejs
@@ -32,6 +32,7 @@
     <input type="password" name="password">
 
   <button>LOGIN</button>
+  <a href="/adminsign">NEW ADMIN REG>>></a>
 
   
 </form>
